fix(styles): update z-index for sidebar splitter and remove min-width from workspace button

--- a/src/browser/base/content/zen-styles/zen-workspaces.css
+++ b/src/browser/base/content/zen-styles/zen-workspaces.css
@@ -72,7 +72,6 @@
     &:has(toolbarbutton:hover) toolbarbutton[active='true'] {
       &:not(:hover) {
         width: min(var(--zen-overflowed-workspace-button-width), 25px);
-        min-width: 10px;
 
         &::after {
           content: '';
